--- a/resources/web/homepage/index.html
+++ b/resources/web/homepage/index.html
@@ -142,6 +142,35 @@
 </body>
 <script type="text/javascript">
 	//HandleStudio(TestData);
+    document.onkeydown = function (event) {
+		var e = event || window.event || arguments.callee.caller.arguments[0];
+
+		if (e.shiftKey && e.ctrlKey)
+			OutputKey(e.keyCode, true, true, false);
+		else if (e.ctrlKey)
+            OutputKey(e.keyCode, true, false, false);
+		else if (e.keyCode === 27) 
+            OutputKey(e.keyCode, false, false, false);
+
+		if (e.shiftKey && e.metaKey)
+			OutputKey(e.keyCode, false, true, true);
+		else if (e.metaKey)
+			OutputKey(e.keyCode, false, false, true);
+		else if (e.keyCode === 27)
+			OutputKey(e.keyCode, false, false, false);
+
+		if (window.event) {
+			try { e.keyCode = 0; } catch (e) { }
+			e.returnValue = false;
+		}
+	};
+
+	window.addEventListener('mousewheel', function (event) {
+		if (event.ctrlKey === true || event.metaKey) {
+			event.preventDefault();
+		}
+	}, { passive: false });
+
 </script>
 </html>
 
