--- a/resources/web/guide/24/index.html
+++ b/resources/web/guide/24/index.html
@@ -99,4 +99,17 @@
 	
 	
 </body>
+<script>
+	document.onkeydown = function (event) {
+		var e = event || window.event || arguments.callee.caller.arguments[0];
+
+		if (e.keyCode == 27)
+			ClosePage();
+
+		if (window.event) {
+			try { e.keyCode = 0; } catch (e) { }
+			e.returnValue = false;
+		}
+	};
+</script>
 </html>
