ENH: new default recentfile image
Change-Id: Ibb46b5a754e42f40b4d3ea773ca551208e0aef46
(cherry picked from commit b3a66ec1a387426842b8c43f38986ef8ada59d6f)

--- a/resources/web/homepage/index.html
+++ b/resources/web/homepage/index.html
@@ -76,7 +76,7 @@
 		<div id="FileList">
 <!--		    <div class="FileItem" onClick="OnOpenRecentFile('aaaa')" fpath='d:\model\11.3mf'>
 				<a class="FileTip" title="d:\model\11.3mf"></a>
-				<div class="FileImg"><img src="img/b.jpg"/></div>
+				<div class="FileImg"><img src="img/d.png"/></div>
 				<a>abcd12334.3mf</a>
 				<div class="FileDate">2021/12/27 09:22</div>
 			</div>
@@ -139,7 +139,7 @@
 				<div class="FileImg"><img src="img/b.jpg"/></div>
 				<a>abcd12334.3mf</a>
 				<div class="FileDate">2021/12/27 09:22</div>
-			</div>	-->			
+			</div>			-->	
 		</div>
 	</div>
 	
