ENH: add contents to user guide
Signed-off-by: yifan.wu <yifan.wu@bambulab.com>
Change-Id: I46e943ce40049a80715ba67c4e73a3587991fe82

--- a/resources/web/homepage/index.html
+++ b/resources/web/homepage/index.html
@@ -161,66 +161,48 @@
 	
 <div id="WikiGuideBigBoard" board="wikiguide">
 <div id="WikiGuideBoard" >
-	<div class="GuideBlock" onClick="OpenWikiUrl('https://www.bambulab.com')">
-		<div class="UG_IMG"><img src="img/wiki.png" /></div>
-		<div class="UG_TITLE trans" tid="wk1">Wiki Title XXXXXXX  XXXXXX XXXXX XXXXX XXXXXX</div>
-		<div class="UG_DESC trans" tid="wk2">This is a long long long long long longlong long long long long longlong long long long long longlong long long long long longlong long long long long long text</div>
-	</div>
-	<div class="GuideBlock" onClick="OpenWikiUrl('https://www.bambulab.com')">
-		<div class="UG_IMG"><img src="img/wiki2.png" /></div>
-		<div class="UG_TITLE trans" tid="wk1">Wiki Title XXXXXXX  XXXXXX XXXXX XXXXX XXXXXX</div>
-		<div class="UG_DESC trans" tid="wk2">This is a long long long long long longlong long long long long longlong long long long long longlong long long long long longlong long long long long long text</div>
-	</div>	
-	<div class="GuideBlock" onClick="OpenWikiUrl('https://www.bambulab.com')">
+	<div class="GuideBlock" onClick="OpenWikiUrl('https://wiki.bambulab.com/en/software/bambu-studio/studio-quick-start')">
 		<div class="UG_IMG"><img src="img/wiki3.png" /></div>
-		<div class="UG_TITLE trans" tid="wk1">Wiki Title XXXXXXX  XXXXXX XXXXX XXXXX XXXXXX</div>
-		<div class="UG_DESC trans" tid="wk2">This is a long long long long long longlong long long long long longlong long long long long longlong long long long long longlong long long long long long text</div>
+		<div class="UG_TITLE trans" tid="wk1">Quick Start</div>
+		<div class="UG_DESC trans" tid="wk2">This article instroduces the most basic usage of Bambu Studio. It guides users to configure software, create projects, and complete the first printing task step by step. </div>
 	</div>
-	<div class="GuideBlock" onClick="OpenWikiUrl('https://www.bambulab.com')">
-		<div class="UG_IMG"><img src="img/wiki3.png" /></div>
-		<div class="UG_TITLE trans" tid="wk1">Wiki Title XXXXXXX  XXXXXX XXXXX XXXXX XXXXXX</div>
-		<div class="UG_DESC trans" tid="wk2">This is a long long long long long longlong long long long long longlong long long long long longlong long long long long longlong long long long long long text</div>
-	</div>
-	<div class="GuideBlock" onClick="OpenWikiUrl('https://www.bambulab.com')">
+	<div class="GuideBlock" onClick="OpenWikiUrl('https://wiki.bambulab.com/en/software/bambu-studio/project-based-workflow')">
 		<div class="UG_IMG"><img src="img/wiki.png" /></div>
-		<div class="UG_TITLE trans" tid="wk1">Wiki Title XXXXXXX  XXXXXX XXXXX XXXXX XXXXXX</div>
-		<div class="UG_DESC trans" tid="wk2">This is a long long long long long longlong long long long long longlong long long long long longlong long long long long longlong long long long long long text</div>
+		<div class="UG_TITLE trans" tid="wk1">Project Based Workflow</div>
+		<div class="UG_DESC trans" tid="wk2">Bambu Studio has put forward a leading workflow to truly achieve an “all in one” project. Based on the mainstream 3MF project format, it provides a series of revolutionary new features, such as Multi-Plate Support, a Project Resource Manager, and Assembly/Part View. It greatly improves the efficiency of both creators and regular users.</div>
 	</div>
-	<div class="GuideBlock" onClick="OpenWikiUrl('https://www.bambulab.com')">
+	<div class="GuideBlock" onClick="OpenWikiUrl('https://wiki.bambulab.com/e/en/software/bambu-studio/high-speed-print-at-quality')">
 		<div class="UG_IMG"><img src="img/wiki3.png" /></div>
-		<div class="UG_TITLE trans" tid="wk1">Wiki Title XXXXXXX  XXXXXX XXXXX XXXXX XXXXXX</div>
-		<div class="UG_DESC trans" tid="wk2">This is a long long long long long longlong long long long long longlong long long long long longlong long long long long longlong long long long long long text</div>
+		<div class="UG_TITLE trans" tid="wk1">High Speed Print at Quality</div>
+		<div class="UG_DESC trans" tid="wk2">It is challenging to print at high speed while maintaining high quality. Bambu Studio makes this happen.
+        "Arch Move" makes the toolhead move smoothly and reduces the machine's vibration. The smart cooling is based on fine-tunned cooling parameters for each filament type.
+        Auto slow down for overhang walls works to prevent deformation at high speeds.</div>
 	</div>
-	<div class="GuideBlock" onClick="OpenWikiUrl('https://www.bambulab.com')">
+	<div class="GuideBlock" onClick="OpenWikiUrl('https://wiki.bambulab.com/en/software/bambu-studio/multi-color-printing')">
 		<div class="UG_IMG"><img src="img/wiki2.png" /></div>
-		<div class="UG_TITLE trans" tid="wk1">Wiki Title XXXXXXX  XXXXXX XXXXX XXXXX XXXXXX</div>
-		<div class="UG_DESC trans" tid="wk2">This is a long long long long long longlong long long long long longlong long long long long longlong long long long long longlong long long long long long text</div>
+		<div class="UG_TITLE trans" tid="wk1">Multi-Color Printing</div>
+		<div class="UG_DESC trans" tid="wk2">Bambu Studio provides versatile colorizing tools to make a colorful model. You can freely add/remove filaments in a project and colorize your model with different brushes. Before printing, each filament will be auto-mapped to an AMS slot, not needing to manually change the spool placement in the AMS.</div>
 	</div>
-	<div class="GuideBlock" onClick="OpenWikiUrl('https://www.bambulab.com')">
+	<div class="GuideBlock" onClick="OpenWikiUrl('https://wiki.bambulab.com/en/software/bambu-studio/how-to-set-slicing-parameters')">
 		<div class="UG_IMG"><img src="img/wiki.png" /></div>
-		<div class="UG_TITLE trans" tid="wk1">Wiki Title XXXXXXX  XXXXXX XXXXX XXXXX XXXXXX</div>
-		<div class="UG_DESC trans" tid="wk2">This is a long long long long long longlong long long long long longlong long long long long longlong long long long long longlong long long long long long text</div>
+		<div class="UG_TITLE trans" tid="wk1">Setting Guide of Slicing Parameters</div>
+		<div class="UG_DESC trans" tid="wk2">The parameter management features in Bambu Studio provide very flexible and powerful control over the slicing process. This article introduces the organization of parameters and provides some skills on taking full advantage of these capabilities.</div>
 	</div>
-	<div class="GuideBlock" onClick="OpenWikiUrl('https://www.bambulab.com')">
+	<div class="GuideBlock" onClick="OpenWikiUrl('https://wiki.bambulab.com/en/software/bambu-studio/remote-control')">
 		<div class="UG_IMG"><img src="img/wiki2.png" /></div>
-		<div class="UG_TITLE trans" tid="wk1">Wiki Title XXXXXXX  XXXXXX XXXXX XXXXX XXXXXX</div>
-		<div class="UG_DESC trans" tid="wk2">This is a long long long long long longlong long long long long longlong long long long long longlong long long long long longlong long long long long long text</div>
+		<div class="UG_TITLE trans" tid="wk1">Remote Control & Monitoring</div>
+		<div class="UG_DESC trans" tid="wk2">We support sending G-code to your printer over WAN/LAN network, controlling & monitoring every aspect of your 3D printer and printing jobs, and updating firmware over the air. If you have more than one printer, you can easily switch between them in the device list.</div>
 	</div>
-	<div class="GuideBlock" onClick="OpenWikiUrl('https://www.bambulab.com')">
+	<div class="GuideBlock" onClick="OpenWikiUrl('https://wiki.bambulab.com/e/en/software/bambu-studio/step')">
 		<div class="UG_IMG"><img src="img/wiki.png" /></div>
-		<div class="UG_TITLE trans" tid="wk1">Wiki Title XXXXXXX  XXXXXX XXXXX XXXXX XXXXXX</div>
-		<div class="UG_DESC trans" tid="wk2">This is a long long long long long longlong long long long long longlong long long long long longlong long long long long longlong long long long long long text</div>
+		<div class="UG_TITLE trans" tid="wk1">STEP Format</div>
+		<div class="UG_DESC trans" tid="wk2">Compared with STL, STEP brings more effective information. Thanks to the high accuracy of STEP, a lot of extrusion paths can be generated as arcs. STEP also includes the assembly relationship of each parts of a model, which can be used to identify the exterior surface and restore the assembly view after a model is split.</div>
 	</div>
-	<div class="GuideBlock" onClick="OpenWikiUrl('https://www.bambulab.com')">
-		<div class="UG_IMG"><img src="img/wiki2.png" /></div>
-		<div class="UG_TITLE trans" tid="wk1">Wiki Title XXXXXXX  XXXXXX XXXXX XXXXX XXXXXX</div>
-		<div class="UG_DESC trans" tid="wk2">This is a long long long long long longlong long long long long longlong long long long long longlong long long long long longlong long long long long long text</div>
-	</div>	
-	<div class="GuideBlock" onClick="OpenWikiUrl('https://www.bambulab.com')">
-		<div class="UG_IMG"><img src="img/wiki3.png" /></div>
-		<div class="UG_TITLE trans" tid="wk1">Wiki Title XXXXXXX  XXXXXX XXXXX XXXXX XXXXXX</div>
-		<div class="UG_DESC trans" tid="wk2">This is a long long long long long longlong long long long long longlong long long long long longlong long long long long longlong long long long long long text</div>
-	</div>		
+	<div class="GuideBlock" onClick="OpenWikiUrl('https://wiki.bambulab.com/en/software/bambu-studio/3d-text')">
+		<div class="UG_IMG"><img src="img/wiki.png" /></div>
+		<div class="UG_TITLE trans" tid="wk1">3D Text</div>
+		<div class="UG_DESC trans" tid="wk2">With 3D Text tool, users can easily create any 3D text shape in a project. Users can freely create 3D text content to make modles more personalized. Bambu Studio provides dozens of fonts and supports bold and italic styles to give text greater flexibility.</div>
+	</div>
 </div>
 </div>
 	
