--- a/resources/web/homepage/index.html
+++ b/resources/web/homepage/index.html
@@ -139,18 +139,18 @@
 				<div class="FileImg"><img src="img/b.jpg"/></div>
 				<a>abcd12334.3mf</a>
 				<div class="FileDate">2021/12/27 09:22</div>
-			</div>			-->	
+			</div>-->				
 		</div>
 	</div>
 	
     <div style="height: 14px;"></div>	
 	
 	<div id="recnet_context_menu">
-		<div class="CT_Item" onClick="OnDeleteRecentFile()">
+		<div id="CT_Delete_Bar" class="CT_Item" onClick="OnDeleteRecentFile()">
 			<div class="CT_Icon CT_Delete"></div>
 			<div class="CT_Text trans" tid="t88">clear</div>
 		</div>
-		<div class="CT_Item " onClick="OnExploreRecentFile()" >
+		<div id="CT_Folder_Bar" class="CT_Item " onClick="OnExploreRecentFile()" >
 			<div class="CT_Icon CT_Explore"></div>
 			<div class="CT_Text trans" tid="t89">open in explorer </div>
 		</div>				
