NEW: add model Depot Button
Change-Id: I64f3e54dab3cd66b400d7dc1519f3ce84eba2fae
(cherry picked from commit 84e964bdd8eb63347a3fefcefe82c9cae6e52c5f)

--- a/resources/web/homepage/index.html
+++ b/resources/web/homepage/index.html
@@ -50,6 +50,13 @@
 <div id="ContentBoard" board="recent">
     <div style="height: 14px;"></div>	
 	<div id="MenuArea">
+		<div class="MenuItem" onClick="OnClickModelDepot()">
+			<div class="MenuIcon"><img src="img/i6.png"></div>
+			<div>
+				<div class="trans" tid="t90">3D Model</div>
+				<div class="MenuDesc trans"  tid="t91">Download 3D Models</div>
+			</div>
+		</div>		
 		<div class="MenuItem" onClick="OnClickNewProject()">
 			<div class="MenuIcon"><img src="img/i4.png"></div>
 			<div>
