ENH: Add darkmode of Html，depend on UserAgent
Change-Id: I8b60db9e2cb7b0d163288e3d8a23db10b64b9bb3

--- a/resources/web/guide/11/index.html
+++ b/resources/web/guide/11/index.html
@@ -4,8 +4,9 @@
 <meta charset="utf-8">
 <meta http-equiv="Cache-Control" content="max-age=7200" />
 <title>引导_P21</title>
-<link rel="stylesheet" type="text/css" href="../css/common.css" />	
+<link rel="stylesheet" type="text/css" href="../css/common.css" />		
 <link rel="stylesheet" type="text/css" href="11.css" />
+<link rel="stylesheet" type="text/css" href="../css/dark.css" />	
 <script type="text/javascript" src="../js/jquery-3.6.0.min.js"></script>
 <script type="text/javascript" src="../js/json2.js"></script>	
 <script type="text/javascript" src="../../data/text.js"></script>	
@@ -20,7 +21,7 @@
 <div id="Content">
 	<div id="EarthIcon"><img src="earth.png"/></div>
 	<div id="RegionList">
-		<div class="trans RegionItem RegionSelected" tid="t48" region="Asia-Pacific" onclick="ChooseRegion('Asia-Pacific')">Asia-Pacific</div>
+		<div class="trans RegionItem RegionSelected TextS1" tid="t48" region="Asia-Pacific" onclick="ChooseRegion('Asia-Pacific')">Asia-Pacific</div>
 		<div class="trans RegionItem" tid="t49" region="China" onclick="ChooseRegion('China')">China</div>
 		<div class="trans RegionItem" tid="t60" region="Europe" onclick="ChooseRegion('Europe')">Europe</div>
 		<div class="trans RegionItem" tid="t61" region="North America" onclick="ChooseRegion('North America')">North America</div>
