--- a/resources/web/guide/22/index.html
+++ b/resources/web/guide/22/index.html
@@ -6,6 +6,7 @@
 <title>引导_P21</title>
 <link rel="stylesheet" type="text/css" href="../css/common.css" />	
 <link rel="stylesheet" type="text/css" href="22.css" />
+<link rel="stylesheet" type="text/css" href="../css/dark.css" />		
 <script type="text/javascript" src="test.js"></script>
 <script type="text/javascript" src="../js/jquery-3.6.0.min.js"></script>
 <script type="text/javascript" src="../js/json2.js"></script>	
