--- a/resources/web/guide/5/index.html
+++ b/resources/web/guide/5/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Cache-Control" content="max-age=7200" />
 <title>引导_P1</title>
 <link rel="stylesheet" type="text/css" href="../css/common.css" />	
+<link rel="stylesheet" type="text/css" href="../css/dark.css" />		
 <link rel="stylesheet" type="text/css" href="5.css" />
 <script type="text/javascript" src="../js/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="../js/json2.js"></script>	
@@ -20,7 +21,7 @@
 <div id="Content">
 
     <div id="FeatureText">
-		<div  ><a tid="t75" class="trans">Bambu Network plug-in Provides the following features:</a></div>
+		<div  ><a tid="t75" class="trans TextS1">Bambu Network plug-in Provides the following features:</a></div>
 		<div><span>●</span>&nbsp;&nbsp;<a tid="t65" class="trans" ></a></div>
 	    <div><span>●</span>&nbsp;&nbsp;<a tid="t66" class="trans" ></a></div>
         <div><span>●</span>&nbsp;&nbsp;<a tid="t67" class="trans" ></a></div>
@@ -29,7 +30,7 @@
 	
 	
 	
-	<div id="CheckArea"><input id="InstallCheck" onClick="SendInstallPluginCheck()" checked type="checkbox"><a tid="t69" class="trans">Install Bambu Network Plug-in. </a></div>
+	<div id="CheckArea"><input id="InstallCheck" onClick="SendInstallPluginCheck()" checked type="checkbox"><a tid="t69" class="trans TextS1">Install Bambu Network Plug-in. </a></div>
 	<div id="RestartText" tid="t70" class="trans" ></div>
 	
 </div>
