--- a/resources/web/guide/1/index.html
+++ b/resources/web/guide/1/index.html
@@ -4,7 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv="Cache-Control" content="max-age=7200" />
 <title>引导_P1</title>
-<link rel="stylesheet" type="text/css" href="../css/common.css" />		
+<link rel="stylesheet" type="text/css" href="../css/common.css" />	
+<link rel="stylesheet" type="text/css" href="../css/dark.css" />		
 <link rel="stylesheet" type="text/css" href="1.css" />
 <script type="text/javascript" src="../js/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="../../data/text.js"></script>	
