FIX: login Username display
Change-Id: Ibc319d27b0f022d8132936b2eb275419e5f1a7ea

--- a/resources/web/homepage/index.html
+++ b/resources/web/homepage/index.html
@@ -25,7 +25,7 @@
 		<div>
 			<img id="UserAvatarIcon" src="img/c.jpg" onerror="this.onerror=null;this.src='img/c.jpg';" />
 		</div>
-		<div id="UserName TextS1"></div>
+		<div id="UserName" class="TextS1"></div>
 		<div id="LogoutBtn" class="Btn trans" tid="t50" onClick="OnLogOut()">log out</div>
 	</div>	
 		
