FIX: adjust background color
Change-Id: I7e32013dbd348c74dc79f0fdd38de4c46e38554d

--- a/resources/web/homepage/index.html
+++ b/resources/web/homepage/index.html
@@ -38,11 +38,11 @@
 	<div id="BtnArea">
 	    <div menu="recent" class="BtnItem BtnItemSelected" onClick="GotoMenu('recent')">
 			<div class="BtnIcon "><img class="LeftIcon" src="img/i2.png" /></div>
-			<div class="trans TextS1" tid="t28">recent</div> 
+			<div class="trans" tid="t28">recent</div> 
 		</div>	
 	    <div menu="wikiguide" class="BtnItem" onClick="GotoMenu('wikiguide')">
 			<div class="BtnIcon "><img class="LeftIcon" src="img/i1.png" /></div>
-			<div class="trans TextS1" tid="t87">UserGuide</div> 
+			<div class="trans" tid="t87">UserGuide</div> 
 		</div>		
 	</div>
 </div>
@@ -51,13 +51,13 @@
 <div id="ContentBoard" board="recent">
     <div style="height: 14px;"></div>	
 	<div id="MenuArea">
-		<div class="MenuItem" onClick="OnClickModelDepot()">
+<!--		<div class="MenuItem" onClick="OnClickModelDepot()">
 			<div class="MenuIcon"><img src="img/i6.png"></div>
 			<div>
 				<div class="trans TextS1" tid="t90">3D Model</div>
 				<div class="MenuDesc trans"  tid="t91">Download 3D Models</div>
 			</div>
-		</div>		
+		</div>	-->	
 		<div class="MenuItem" onClick="OnClickNewProject()">
 			<div class="MenuIcon"><img src="img/i4.png"></div>
 			<div>
