ENH: fix some color problem
Change-Id: Iaae11323cfab96b05746208b8c31b20f3ab56fba
(cherry picked from commit dbe62188c877afdecc522534a2f85f7a0ea80ef4)

--- a/resources/web/homepage/index.html
+++ b/resources/web/homepage/index.html
@@ -79,75 +79,81 @@
 	<div id="RecentFileArea">
 		<div id="RecentTitleBlock">
 		    <div id="RecentTitle" class="Content-Title trans TextS1" tid="t35">recent open</div>
-			<div id="RecentClearAllBtn" class="trans" tid="t12" onClick="OnDeleteAllRecentFiles()">Clear all</div>
+			<div id="RecentClearAllBtn" class="trans TextS1" tid="t12" onClick="OnDeleteAllRecentFiles()">Clear all</div>
 		</div>
 		<div id="FileList">
 <!--		    <div class="FileItem" onClick="OnOpenRecentFile('aaaa')" fpath='d:\model\11.3mf'>
 				<a class="FileTip" title="d:\model\11.3mf"></a>
 				<div class="FileImg"><img src="img/d.png"/></div>
-				<a class="TextS1">abcd12334.3mf</a>
+				<div class="FileName TextS1">abcd12334abcd12334abcd12334.3mf</div>
 				<div class="FileDate">2021/12/27 09:22</div>
 			</div>
-		    <div class="FileItem" fpath='d:\model\22.3mf'>
+		    <div class="FileItem" onClick="OnOpenRecentFile('aaaa')" fpath='d:\model\11.3mf'>
 				<a class="FileTip" title="d:\model\11.3mf"></a>
-				<div class="FileImg"><img src="img/b.jpg"/></div>
-				<a class="TextS1">abcd12334.3mf</a>
+				<div class="FileImg"><img src="img/d.png"/></div>
+				<div class="FileName TextS1">abcd12334abcd12334abcd12334.3mf</div>
 				<div class="FileDate">2021/12/27 09:22</div>
 			</div>
-		    <div class="FileItem">
+		    <div class="FileItem" onClick="OnOpenRecentFile('aaaa')" fpath='d:\model\11.3mf'>
 				<a class="FileTip" title="d:\model\11.3mf"></a>
-				<div class="FileImg"><img src="img/b.jpg"/></div>
-				<a class="TextS1">abcd12334.3mf</a>
+				<div class="FileImg"><img src="img/d.png"/></div>
+				<div class="FileName TextS1">abcd12334abcd12334abcd12334.3mf</div>
 				<div class="FileDate">2021/12/27 09:22</div>
 			</div>
-		    <div class="FileItem">
+		    <div class="FileItem" onClick="OnOpenRecentFile('aaaa')" fpath='d:\model\11.3mf'>
 				<a class="FileTip" title="d:\model\11.3mf"></a>
-				<div class="FileImg"><img src="img/b.jpg"/></div>
-				<a class="TextS1">abcd12334.3mf</a>
+				<div class="FileImg"><img src="img/d.png"/></div>
+				<div class="FileName TextS1">abcd12334abcd12334abcd12334.3mf</div>
 				<div class="FileDate">2021/12/27 09:22</div>
 			</div>
-		    <div class="FileItem">
+		    <div class="FileItem" onClick="OnOpenRecentFile('aaaa')" fpath='d:\model\11.3mf'>
 				<a class="FileTip" title="d:\model\11.3mf"></a>
-				<div class="FileImg"><img src="img/b.jpg"/></div>
-				<a class="TextS1">abcd12334.3mf</a>
-				<div class="FileDate">2021/12/27 09:22</div>
-			</div>	
-		    <div class="FileItem">
-				<a class="FileTip" title="d:\model\11.3mf"></a>
-				<div class="FileImg"><img src="img/b.jpg"/></div>
-				<a class="TextS1">abcd12334.3mf</a>
+				<div class="FileImg"><img src="img/d.png"/></div>
+				<div class="FileName TextS1">abcd12334abcd12334abcd12334.3mf</div>
 				<div class="FileDate">2021/12/27 09:22</div>
 			</div>
-		    <div class="FileItem">
+		    <div class="FileItem" onClick="OnOpenRecentFile('aaaa')" fpath='d:\model\11.3mf'>
 				<a class="FileTip" title="d:\model\11.3mf"></a>
-				<div class="FileImg"><img src="img/b.jpg"/></div>
-				<a class="TextS1">abcd12334.3mf</a>
+				<div class="FileImg"><img src="img/d.png"/></div>
+				<div class="FileName TextS1">abcd12334abcd12334abcd12334.3mf</div>
 				<div class="FileDate">2021/12/27 09:22</div>
 			</div>
-		    <div class="FileItem">
+		    <div class="FileItem" onClick="OnOpenRecentFile('aaaa')" fpath='d:\model\11.3mf'>
 				<a class="FileTip" title="d:\model\11.3mf"></a>
-				<div class="FileImg"><img src="img/b.jpg"/></div>
-				<a class="TextS1">abcd12334.3mf</a>
-				<div class="FileDate">2021/12/27 09:22</div>
-			</div>	
-		    <div class="FileItem" >
-				<a class="FileTip" title="d:\model\11.3mf"></a>
-				<div class="FileImg"><img src="img/xxxx.jpg" onerror="this.onerror=null;this.src='img/d.png';"  alt="No Image"  /></div>
-				<a class="TextS1">abcd12334.3mf</a>
+				<div class="FileImg"><img src="img/d.png"/></div>
+				<div class="FileName TextS1">abcd12334abcd12334abcd12334.3mf</div>
 				<div class="FileDate">2021/12/27 09:22</div>
 			</div>
-		    <div class="FileItem">
+		    <div class="FileItem" onClick="OnOpenRecentFile('aaaa')" fpath='d:\model\11.3mf'>
 				<a class="FileTip" title="d:\model\11.3mf"></a>
-				<div class="FileImg"><img src="img/b.jpg"/></div>
-				<a class="TextS1">abcd12334.3mf</a>
+				<div class="FileImg"><img src="img/d.png"/></div>
+				<div class="FileName TextS1">abcd12334abcd12334abcd12334.3mf</div>
 				<div class="FileDate">2021/12/27 09:22</div>
 			</div>
-		    <div class="FileItem">
+		    <div class="FileItem" onClick="OnOpenRecentFile('aaaa')" fpath='d:\model\11.3mf'>
 				<a class="FileTip" title="d:\model\11.3mf"></a>
-				<div class="FileImg"><img src="img/b.jpg"/></div>
-				<a class="TextS1">abcd12334.3mf</a>
+				<div class="FileImg"><img src="img/d.png"/></div>
+				<div class="FileName TextS1">abcd12334abcd12334abcd12334.3mf</div>
 				<div class="FileDate">2021/12/27 09:22</div>
-			</div>	-->			
+			</div>
+		    <div class="FileItem" onClick="OnOpenRecentFile('aaaa')" fpath='d:\model\11.3mf'>
+				<a class="FileTip" title="d:\model\11.3mf"></a>
+				<div class="FileImg"><img src="img/d.png"/></div>
+				<div class="FileName TextS1">abcd12334abcd12334abcd12334.3mf</div>
+				<div class="FileDate">2021/12/27 09:22</div>
+			</div>
+		    <div class="FileItem" onClick="OnOpenRecentFile('aaaa')" fpath='d:\model\11.3mf'>
+				<a class="FileTip" title="d:\model\11.3mf"></a>
+				<div class="FileImg"><img src="img/d.png"/></div>
+				<div class="FileName TextS1">abcd12334abcd12334abcd12334.3mf</div>
+				<div class="FileDate">2021/12/27 09:22</div>
+			</div>
+		    <div class="FileItem" onClick="OnOpenRecentFile('aaaa')" fpath='d:\model\11.3mf'>
+				<a class="FileTip" title="d:\model\11.3mf"></a>
+				<div class="FileImg"><img src="img/d.png"/></div>
+				<div class="FileName TextS1">abcd12334abcd12334abcd12334.3mf</div>
+				<div class="FileDate">2021/12/27 09:22</div>
+			</div>	-->		
 		</div>
 	</div>
 	
