uncheck `send data` by default

--- a/resources/web/guide/3/index.html
+++ b/resources/web/guide/3/index.html
@@ -26,7 +26,7 @@
 <br/>	
 
 	<div>
-	<input id="ChoosePrivacy" type="checkbox" checked onClick="SendPrivacySelect()"  onChange="SendPrivacySelect()" />
+	<input id="ChoosePrivacy" type="checkbox" onClick="SendPrivacySelect()"  onChange="SendPrivacySelect()" />
 	<span class="trans" tid="t7">Allow sending anonymous data</span>
 </div>
 </div>		
